minikube/default/deployment-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: balance-app-blue
  namespace: bank-app
  labels:
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: balance-app
      namespace: bank-app
  template:
    metadata:
      labels:
        app: balance-app
        namespace: bank-app
        version: blue
    spec:
      containers:
        - name: balance-app
          image: matheusmatias/quarkus-project:0.0.12
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
