minikube/default/service.yml
apiVersion: v1
kind: Service
metadata:
  name: balance-service
  namespace: bank-app
spec:
  ports:
    - port: 8090
      targetPort: 8090
      protocol: TCP
  type: NodePort
  selector:
    app: balance-app
    namespace: bank-app
