minikube/default/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
    name: bank-app-gateway
    namespace: bank-app
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
