minikube/default/blue-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: balance-service-stage-blue
  namespace: bank-app
spec:
  gateways:
    - bank-app-gateway
  hosts:
    - "*"
  http:
    - match:
      - uri:
          prefix: /balance
      route:
      - destination:
          host: balance
          port:
            number: 8090
          subset: blue
        weight: 70
      - destination:
          host: balance
          port:
            number: 8090
          subset: green
        weight: 30
